--- a/pom.xml
+++ b/pom.xml
@@ -26,20 +26,20 @@
 			<version>4.15.0</version>
 		</dependency>
 		
-<dependency>
+<!--<dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.7.1</version>
     
-</dependency>
+</dependency>-->
 
-<!-- <dependency>
+ <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.1.0</version>
     <scope>test</scope>
 </dependency>
--->
+
 
 <!-- 
 		<dependency>
