--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
     <artifactId>testng</artifactId>
     <version>7.1.0</version>
     <scope>test</scope>
-</dependency>
--->
+</dependency>-->
+
 
 <!-- 
 		<dependency>
@@ -130,8 +130,8 @@
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
-						<!--<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
-                           <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> 
+						<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
+                          <!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>--> 
 					</suiteXmlFiles>
 
 					<argLine>
