--- a/src/test/resources/config/config.qa.properties
+++ b/src/test/resources/config/config.qa.properties
@@ -1,13 +1,15 @@
 browser=chrome
+browserversion=
+testname=
 url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 
 headless=false
-incognito=true
+incognito=false
 
 username=Karishma@opencart.com
 password=Kari@123
 
 
-remote=false
-huburl=http://localhost:4444/wd/hub
+remote=true
+huburl=http://3.23.102.24:4444/wd/hub
